<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Used multiple times -->
    <string name="app_name">NEN Field Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="notes">Notes</string>


    <!-- Manifest -->

    <!-- Login -->
    <string name="g_login">G+ Login</string>
    <string name="signed_in_fmt">Signed in fmt</string>
    <string name="server_client_id">269408801054-qhvcdvok27smbcm5pln86jlmqrm7l9pa.apps.googleusercontent.com</string>
    <string name="auth_code_fmt">Auth Code Fmt</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading</string>


    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <!-- Categories -->
    <string name="edittext_categories">Categories</string>


    <!-- Locations -->
    <string name="all_locations">All Locations</string>
    <string name="no_locations">There are no locations in the database yet.</string>
    <string name="Location_deleted_successfully">Location Deleted Successfully!!! WTF did you just do?</string>
    <string name="StoreName">Store Name</string>
    <string name="storeabbr">Store Abbr</string>
    <string name="storeid">Store ID#</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="phonenumber">Phone Number</string>
    <string name="citystatezip">City State Zip</string>
    <string name="empty_fields_message">Error: Empty Fields</string>
    <string name="add_new_location">Add New Location</string>


    <!-- Asset -->
    <string name="no_assets_working_for_this_location_add_a_new_one_by_clicking_the_add_button_on_the_top_right">no assets?</string>
    <string name="asset_deleted_successfully">Asset Deleted Successfully!!! WTF did you just do?</string>
    <string name="assetnumber">Asset number</string>
    <string name="category">Category</string>
    <string name="machinetype">Type</string>
    <string name="select_a_location">Select a Location</string>
    <string name="select_an_area">Select an Area</string>
    <string name="select_a_category">Select a Category</string>
    <string name="add">Add</string>
    <string name="add_new_asset">Add New Asset</string>
    <string name="all_assets">All Assets</string>
    <string name="fill">Filled With</string>

    <string-array name="areas_array">
        <item>Area:</item>
        <item>Non WalMart</item>
        <item>WM - Customer Service Desk</item>
        <item>WM - FFC</item>
        <item>WM - Front Wall</item>
        <item>WM - Gameplay</item>
        <item>WM - GM Vestibule</item>
        <item>WM - GR Vestibule</item>
        <item>WM - Other</item>
        <item>WM - Sidewalk Outside</item>
    </string-array>

    <string-array name="array_category">
        <item>Category:</item>
        <item>Crane</item>
        <item>Bulk</item>
        <item>Ride</item>
        <item>Video</item>
        <item>Other</item>
    </string-array>

    <string-array name="array_crane_types">
        <item>Type:</item>
        <item>60" Low Deck</item>
        <item>60" High Deck</item>
        <item>42" Low Deck</item>
        <item>42" High Deck</item>
        <item>30"</item>
        <item>Pirates Chest</item>
    </string-array>

    <string-array name="array_bulk_types">
        <item>Type:</item>
        <item>9 Head</item>
        <item>7 Head</item>
        <item>5 Head</item>
        <item>Spiral</item>
        <item>Bounce-a-roo</item>
        <item>Sticker: 2 head</item>
        <item>Sticker: 4 head</item>
        <item>Other</item>
    </string-array>

    <string-array name="array_ride_types">
        <item>Add Ride Type</item>
    </string-array>

    <string-array name="array_video_types">
        <item>Add Video Type</item>
    </string-array>

    <string-array name="array_claw_size">
        <item>8 Inch</item>
        <item>4 Inch</item>
        <item>Treasure</item>
        <item>Fun Shoppe</item>
    </string-array>


    <!-- Area -->
    <string name="add_new_area">Add New Area</string>
    <string name="all_areas">Add New Area</string>
    <string name="area">Area</string>
    <string name="input_area">Area</string>
    <string name="area_of_store">Area of Store</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- FillType -->
    <string name="txt_FillTypeName">New Fill Type</string>
    <string name="FillType_deleted_successfully">Fill Type Deleted Successfully</string>
    <string name="FillTypeName">New Fill Type</string>



</resources>
