<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp" >

    <TextView
        android:id="@+id/txt_AssetNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/assetnumber"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_AssetNumber"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_MachineType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_Category"
        android:layout_marginTop="4dp"
        android:text="@string/machinetype"
        android:textColor="@android:color/darker_gray" />


</RelativeLayout>